Changed memory reqs for tests